--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=8000
 MONGO_URL=mongodb://127.0.0.1:27017/gamerhub
 JWT_SECRET="gamerhubsecret"
-CLIENT_URL=http://localhost:5713
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASSWORD=your_app_password
+CLIENT_URL=http://localhost:5173
+EMAIL_USER=narwanigorav3@gmail.com
+EMAIL_PASSWORD=sycauxgltfvqkhlh
